--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@typescript-eslint/parser": "^5.2.0",
     "express": "^4.17.1",
     "mongoose": "^6.0.12",
-    "ts-node-dev": "^1.1.8"
+    "ts-node-dev": "^1.1.8",
+    "uuid": "^8.3.2"
   }
 }
