added jwt authentication, added token verification middleware

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 MONGODB_CONNECT = mongodb+srv://gchib00:uXF5aTzIBVdzXJgV@rs-cluster.j7uur.mongodb.net/employeesDB?retryWrites=true&w=majority
-SECRET_VALUE_FOR_TOKEN = gchib00
+SECRET_VALUE_FOR_TOKEN = redsource
