--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "typescript": "^4.4.4"
   },
   "scripts": {
-    "tsc": "tsc",
+    "start": "ts-node src/index.ts",
     "dev": "ts-node-dev src/index.ts",
     "lint": "eslint --ext .ts ."
   },
