--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lint": "eslint --ext .ts ."
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.6.0",
     "@types/express": "^4.17.13",
     "@typescript-eslint/eslint-plugin": "^5.2.0",
     "@typescript-eslint/parser": "^5.2.0",
