--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "lint": "eslint --ext .ts ."
   },
   "dependencies": {
-    "@sendgrid/mail": "^7.6.0",
     "@types/express": "^4.17.13",
     "@typescript-eslint/eslint-plugin": "^5.2.0",
     "@typescript-eslint/parser": "^5.2.0",
@@ -25,6 +24,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.12",
+    "nodemailer": "^6.7.2",
     "ts-node-dev": "^1.1.8",
     "uuid": "^8.3.2"
   }
