--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.12",
+    "multer": "^1.4.4",
     "nodemailer": "^6.7.2",
     "ts-node-dev": "^1.1.8",
     "uuid": "^8.3.2"
